--- a/pc/index.html
+++ b/pc/index.html
@@ -5,15 +5,58 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="keywords" content="ZZB博客" />
     <meta name="description" content="ZZB博" />
+    <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon" />
     <script src="../static/js/enterpc.js"></script>
     <script src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
     <script src="http://libs.baidu.com/jquerytools/1.2.7/jquery.tools.min.js"></script>
     <script src="http://libs.baidu.com/jqueryui/1.8.22/jquery-ui.min.js "></script>
     <script src="http://libs.baidu.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
     <script src=" http://libs.baidu.com/json/json2/json2.js"></script>
-    <link href="http://libs.baidu.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet">
+    <link href="http://libs.baidu.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet"></link>
+    <style>
+    body{
+        background-color: #f0f0f0;
+    }
+    .my_scrollview{
+        height:500px;
+        width:800px;
+        margin: 0 auto;
+        background-color:#ffffff;
+    }
+    .my_scrollview .headview{
+        height:200px;
+        width:100%;
+        background-color: #90EE90;
+    }
+    .my_scrollview .headview .head_image{
+        height: 80px;
+        width: 80px;
+        margin: 0 auto;
+    }
+    .my_scrollview .headview .head_image img{
+        height: 80px;
+        width: 80px;
+        border-radius: 40px;
+    }
+    .my_scrollview .headview .head_title{
+        margin-top: 15px;
+        height: 25px;
+        width: 100%;
+        text-align: center;
+        color: #000000;
+        font-size: 25px;
+    }
+    </style>
 </head>
 <body>
-    
+    <div class="my_scrollview">
+        <div class="headview">
+            <div style="height:30px;width:100%;"></div>
+            <div class="head_image">
+                <img src="../data/images/head_image.jpg">
+            </div>
+            <div class="head_title">ZZB博客</div>
+        </div>
+    </div>
 </body>
 </html>
