--- a/pc/index.html
+++ b/pc/index.html
@@ -14,62 +14,124 @@
     <script src="http://cdn.bootcss.com/blueimp-md5/2.10.0/js/md5.min.js"></script>
     <script src="../static/js/common_func.js"></script>
     <link href="http://libs.baidu.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet"></link>
-    <!-- 头部CSS -->
     <style>
-    body{
-        background-color: #f0f0f0;
-    }
-    .my_scrollview{
-        height:500px;
-        width:800px;
-        margin: 0 auto;
-        background-color:#ffffff;
-    }
-    .my_scrollview .headview{
-        height:200px;
-        width:100%;
-        background-color: #90EE90;
-    }
-    .my_scrollview .headview .head_image{
-        height: 80px;
-        width: 80px;
-        margin: 0 auto;
-    }
-    .my_scrollview .headview .head_image img{
-        height: 80px;
-        width: 80px;
-        border-radius: 40px;
-    }
-    .my_scrollview .headview .head_title{
-        margin-top: 15px;
-        height: 25px;
-        width: 100%;
-        text-align: center;
-        color: #000000;
-        font-size: 25px;
-    }
-    </style>
-    <style>
+        /* 头部CSS */
+        body{
+            background-color: #f0f0f0;
+        }
+        .my-scrollview{
+            height:500px;
+            width:800px;
+            margin: 0 auto;
+            background-color:#ffffff;
+        }
+        .my-scrollview .head-view{
+            height:200px;
+            width:100%;
+            background-color: #90EE90;
+        }
+        .my-scrollview .head-view .head-image{
+            height: 80px;
+            width: 80px;
+            margin: 0 auto;
+        }
+        .my-scrollview .head-view .head-image img{
+            height: 80px;
+            width: 80px;
+            border-radius: 40px;
+        }
+        .my-scrollview .head-view .head-title{
+            margin-top: 15px;
+            height: 25px;
+            width: 100%;
+            text-align: center;
+            color: #000000;
+            font-size: 25px;
+        }
 
+        .my-scrollview .table-view{
+            margin-top: 20px;
+            width: 100%;
+            height: auto;
+            background-color: red ;
+        }
+        .my-scrollview .table-view .table-cell{
+            width: 100%;
+            height: 80px;
+            background-color: red ;
+        }
+        .my-scrollview table-view .table-line{
+            width: 100%;
+            height: 1px;
+            background-color: #f0f0f0;
+        }
+
+        /*分页*/
+        .my-scrollview .page-view{
+            width: 700px;
+            height: auto;
+            margin: 0 auto;
+        }
     </style>
 </head>
-<!--<body>-->
-<!--    <div class="my_scrollview">-->
-<!--        <div class="headview">-->
-<!--            <div style="height:30px;width:100%;"></div>-->
-<!--            <div class="head_image">-->
-<!--                <img src="../data/images/head_image.jpg">-->
-<!--            </div>-->
-<!--            <div class="head_title">ZZB博客</div>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--</body>-->
+<body>
+<div class="my-scrollview">
+    <div class="head-view">
+        <div style="height:30px;width:100%;"></div>
+        <div class="head-image">
+            <img src="../data/images/head_image.jpg">
+        </div>
+        <div class="head-title">ZZB博客</div>
+    </div>
+
+    <div class="table-view">
+
+    </div>
+
+    <div class="page-view">
+        <ul class="pagination">
+
+        </ul>
+    </div>
+</div>
+
+</body>
 
 <script>
     $(document).ready(function(){
+        // 获取文章数据
         var url = "../data/file_data/acticle_list.txt";
-        var htmlobj= $.ajax({url:url,async:false})
-        alert(htmlobj.responseText);
+        var htmlobj= $.ajax({url:url,async:false});
+        var acticleList = JSON.parse(htmlobj.responseText);
+        console.log(acticleList);
+
+        // 计算分页并加载分页
+        var totalActicle   = acticleList.length;
+        var pageNumActicle = parseInt(totalActicle/15) + 1;
+        function selectPageIndex(pageIndex) {
+            loadActicleToHtml(pageIndex);
+            var paginationHtml = "";
+            for(var i=1;i<=pageNumActicle;i++){
+                if( pageIndex == 1 ) {
+                    paginationHtml += '<li class="active" onclick="selectPageIndex('+i+')"><a href="#">'+i+'</a></li>';
+                }
+                else{
+                    paginationHtml += '<li onclick="selectPageIndex('+i+')"><a href="#">'+i+'</a></li>';
+                }
+            }
+            $('.pagination').html(paginationHtml);
+        }
+
+        // 加载数据
+        function loadActicleToHtml(pageIndex) {
+            for(var i=0;i<10;i++){
+
+            }
+
+        }
+
+        selectPageIndex(1);
+
     });
 </script>
 </html>
