--- a/pc/index.html
+++ b/pc/index.html
@@ -7,13 +7,13 @@
     <meta name="description" content="ZZB博" />
     <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon" />
     <script src="../static/js/enterpc.js"></script>
-    <script src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
-    <script src="http://libs.baidu.com/jqueryui/1.8.22/jquery-ui.min.js "></script>
-    <script src="http://libs.baidu.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
-    <script src="http://libs.baidu.com/json/json2/json2.js"></script>
-    <script src="http://cdn.bootcss.com/blueimp-md5/2.10.0/js/md5.min.js"></script>
+    <script src="//libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
+    <script src="//libs.baidu.com/jqueryui/1.8.22/jquery-ui.min.js "></script>
+    <script src="//libs.baidu.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
+    <script src="//libs.baidu.com/json/json2/json2.js"></script>
+    <script src="//cdn.bootcss.com/blueimp-md5/2.10.0/js/md5.min.js"></script>
     <script src="../static/js/common_func.js"></script>
-    <link href="http://libs.baidu.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet"></link>
+    <link href="//libs.baidu.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet"></link>
     <style>
         /* 头部CSS */
         body{
