--- a/pc/index.html
+++ b/pc/index.html
@@ -80,6 +80,7 @@
             white-space:nowrap;
             overflow:hidden;
             text-overflow:ellipsis;
+            color: black;
         }
         .my-scrollview .table-view .table-cell .time-view{
             width: 740px;
