--- a/phone/detail.html
+++ b/phone/detail.html
@@ -4,9 +4,10 @@
     <title>ZZB博客</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="keywords" content="ZZB博客" />
-    <meta name="description" content="ZZB博" />
+    <meta name="description" content="ZZB博客" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
     <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon" />
-    <script src="../static/js/enterpc.js"></script>
+    <script src="../static/js/enterphone.js"></script>
     <script src="//libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
     <script src="//libs.baidu.com/jqueryui/1.8.22/jquery-ui.min.js "></script>
     <script src="//libs.baidu.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
@@ -23,7 +24,7 @@
         }
         .my-scrollview{
             height:auto;
-            width:800px;
+            width:100%;
             margin: 0 auto;
             background-color:#ffffff;
         }
@@ -60,42 +61,41 @@
         }
 
         .my-scrollview .acticle-title{
-            width: 740px;
+            width: calc(100% - 30px);
             height: auto;
-            margin-left: 30px;
+            margin-left: 15px;
             text-align: center;
-            font-size: 20px;
+            font-size: 17px;
             font-weight: 500;
             margin-top: 20px;
         }
         .my-scrollview .acticle-time{
-            width: 740px;
+            width: 100%;
             height: 30px;
-            margin-left: 30px;
             text-align: left;
-            font-size: 16px;
+            font-size: 13px;
             margin-top: 10px;
             color: #a0a0a0;
             text-align: center;
         }
 
         .my-scrollview .acticle-content{
-            width: 740px;
+            width: calc(100% - 30px);
             height: auto;
-            margin-left: 30px;
+            margin-left: 15px;
         }
 
         .my-scrollview .acticle-next-list{
-            width: 740px;
+            width: 100%;
             height: auto;
         }
 
         .my-scrollview .acticle-next{
-            width: 740px;
+            width: calc(100% - 30px);
             height: 30px;
-            margin-left: 30px;
+            margin-left: 15px;
             text-align: left;
-            font-size: 17px;
+            font-size: 15px;
             font-weight: 400;
             margin-top: 15px;
             display:block;
@@ -108,8 +108,8 @@
 
         .back-home{
             position: absolute;
-            bottom: 60px;
-            right: 30px;
+            bottom: 10px;
+            right: 10px;
             width: 60px;
             height: 60px;
             line-height: 60px;
@@ -139,9 +139,10 @@
     <div style="width: 100%;height: 30px"></div>
 
     <div class="acticle-next-list"></div>
-
-    <div style="width: 100%;height: 20px"></div>
+    <div style="width: 100%;height: 10px"></div>
 </div>
+
+<div style="width: 100%;height: 70px"></div>
 
 <div class="back-home" onclick="location.href='index.html'"><span class="glyphicon glyphicon-home"></span></div>
 
