--- a/pc/detail.html
+++ b/pc/detail.html
@@ -107,7 +107,7 @@
 
 
         .back-home{
-            position: absolute;
+            position: fixed;
             bottom: 60px;
             right: 30px;
             width: 60px;
@@ -153,7 +153,7 @@
         var url = "https://zzbcsy.github.io/data/file_data/acticle_list.txt";
         var htmlobj= $.ajax({url:url,async:false});
         var acticleList = JSON.parse(htmlobj.responseText);
-        console.log(acticleList);
+        acticleList = acticleList.reverse();
 
         // 解析数据
         var acticleId = requestUrlGetQueryKey('id');
