--- a/detail.html
+++ b/detail.html
@@ -5,15 +5,14 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="keywords" content="ZZB博客" />
     <meta name="description" content="ZZB博" />
-    <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon" />
-    <script src="../static/js/enterpc.js"></script>
+    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
     <script src="//libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
     <script src="//libs.baidu.com/jqueryui/1.8.22/jquery-ui.min.js "></script>
     <script src="//libs.baidu.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
     <script src="//libs.baidu.com/json/json2/json2.js"></script>
     <script src="//cdn.bootcss.com/blueimp-md5/2.10.0/js/md5.min.js"></script>
     <script src="//libs.baidu.com/json/json2/json2.js"></script>
-    <script src="../static/js/common_func.js"></script>
+    <script src="./static/js/common_func.js"></script>
     <script src="//cdn.bootcss.com/showdown/1.9.0/showdown.min.js"></script>
     <link href="//libs.baidu.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet"></link>
     <style>
